# django-ormsgpack

./: .gitignore  README.md  pyproject.toml  tox.ini
.github/workflows/: tox.yml
django_ormsgpack/: __init__.py  code.py  model.py  registry.py  serializable.py  serializer.py  serializer_fns.py
my_app/: __init__.py  models.py
tests/: conftest.py  test_from_tuple.py  test_my_app.py
