[tool.poetry]
name = "django-ormsgpack"
version = "0.1.0"
description = "Project template for Django app, using Poetry."
license = "MIT"
authors = ["Tyler Gannon <tgannon@gmail.com>"]
maintainers = ["Tyler Gannon <tgannon@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/yunojuno/poetry-template"
repository = "https://github.com/yunojuno/poetry-template"
documentation = "https://github.com/yunojuno/poetry-template"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 2.2",
    "Framework :: Django :: 3.0",
    "Framework :: Django :: 3.1",
    "Framework :: Django :: 3.2",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
packages = [{ include = "django_ormsgpack" }]

[tool.poetry.dependencies]
python = "^3.7"
django = "^2.2 || ^3.0"
ormsgpack = "^0.3.1"
rope = "^0.19.0"
pylint = {version = "^2.9.3", extras = ["dev"]}
jedi = {version = "^0.18.0", extras = ["dev"]}

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
pytest-django = "*"
coverage = "*"
pylint = "*"
flake8 = "*"
flake8-bandit = "*"
flake8-docstrings = "*"
flake8-print = "*"
isort = "*"
mypy = "*"
pre-commit = "*"
black = {version = "*", allow-prereleases = true}
freezegun = "*"
tox = "*"
types-requests = "*"
types-python-dateutil = "*"
types-simplejson = "*"
jedi = "^0.18.0"
pylint-django = "^2.4.4"
types-pytz = "^2021.1.0"
tox-poetry-installer = {extras = ["poetry"], version = "^0.8.1"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
